--- a/home.html
+++ b/home.html
@@ -9,19 +9,139 @@
         <!-- MY CSS -->
         <link rel="stylesheet" type="text/css" href="home.css">
         <!-- Latest compiled JavaScript -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     </head>
-    <body id="test">
+    <body id="background">
         <div id="welcome_box" class="container">
             <div class="row">
                 <div class="col">
                     <h1 class="text-center">Hi, I'm Daniel Burger</h1>
-                    <p class="text-center">Welcome to my website.</p>
+                    <p class="text-center">Welcome to my website! I am majoring in Computer Engineering with a minor in Psychology at Purdue University (May 2021). I spent the summer of 2019 in Melbourne Florida working with Northrop Grumman as an Electronics and Payload Intern. I have an interest in Software Engineering, Development, and UX Design.</p>
                 </div>
                 <div class="col">
                     <img id="dan_bus_prof" src="daniel-business-professional-cropped.jpg" size="900" alt="Daniel Burger dressed business professional">
                 </div>
             </div>
         </div>
+        <div id="courses" class="container">
+            <h2>Coursework at Purdue University</h2>
+            <div class="panel-group">
+                <div class="row">
+                    <div class="col">
+                        <div class="row">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapse1">Principles of Engineering</a>
+                                    </h4>
+                                </div>
+                                <div id="collapse1" class="panel-collapse collapse">
+                                    <div class="panel-body"><strong>ENGR 131 & 132</strong></div>
+                                    <div class="panel-footer">MATLAB, Excel, regression analysis, problem solving methods</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapse4">Data Structures</a>
+                                    </h4>
+                                </div>
+                                <div id="collapse4" class="panel-collapse collapse">
+                                    <div class="panel-body"><strong>ECE 368</strong></div>
+                                    <div class="panel-footer">Time and space complexity, abstract data types like stacks/queues, Huffman compression, graphs & shortest path algorithms</div>
+                                </div>
+                            </div> 
+                        </div>
+                        <div class="row">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapse7">Object Oriented Programming</a>
+                                    </h4>
+                                </div>
+                                <div id="collapse7" class="panel-collapse collapse">
+                                    <div class="panel-body"><strong>ECE 30862</strong></div>
+                                    <div class="panel-footer">~ In Progress ~</div>
+                                </div>
+                            </div> 
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="row">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapse2">Advanced C Programming</a>
+                                    </h4>
+                                </div>
+                                <div id="collapse2" class="panel-collapse collapse">
+                                    <div class="panel-body"><strong>ECE 264</strong></div>
+                                    <div class="panel-footer">GDB debugging, linked lists, binary trees, merge & quick sort, integer partition, recursive functions.</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapse5">Digital System Design</a>
+                                    </h4>
+                                </div>
+                                <div id="collapse5" class="panel-collapse collapse">
+                                    <div class="panel-body"><strong>ECE 270</strong></div>
+                                    <div class="panel-footer">TODO</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapse8">Signals & Systems</a>
+                                    </h4>
+                                </div>
+                                <div id="collapse8" class="panel-collapse collapse">
+                                    <div class="panel-body"><strong>ECE 301</strong></div>
+                                    <div class="panel-footer">TODO</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="row">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapse3">Linear Circuit Analysis</a>
+                                    </h4>
+                                </div>
+                                <div id="collapse3" class="panel-collapse collapse">
+                                    <div class="panel-body"><strong>ECE 29595 Parts 1 & 2</strong></div>
+                                    <div class="panel-footer">TODO</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title">
+                                    <a data-toggle="collapse" href="#collapse6">Python for Data Science</a>
+                                    </h4>
+                                </div>
+                                <div id="collapse6" class="panel-collapse collapse">
+                                    <div class="panel-body"><strong>ECE 20875</strong></div>
+                                    <div class="panel-footer">~ In Progress ~</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
+
+
