Finished course descriptions

--- a/home.html
+++ b/home.html
@@ -92,7 +92,7 @@
                                 </div>
                                 <div id="collapse5" class="panel-collapse collapse">
                                     <div class="panel-body"><strong>ECE 270</strong></div>
-                                    <div class="panel-footer">TODO</div>
+                                    <div class="panel-footer">Logic gates, combinational/sequential logic circuits, programming PLDs in Verilog, state machine design, simple computer architecture</div>
                                 </div>
                             </div>
                         </div>
@@ -105,7 +105,7 @@
                                 </div>
                                 <div id="collapse8" class="panel-collapse collapse">
                                     <div class="panel-body"><strong>ECE 301</strong></div>
-                                    <div class="panel-footer">TODO</div>
+                                    <div class="panel-footer">~ In Progress ~</div>
                                 </div>
                             </div>
                         </div>
@@ -120,7 +120,7 @@
                                 </div>
                                 <div id="collapse3" class="panel-collapse collapse">
                                     <div class="panel-body"><strong>ECE 29595 Parts 1 & 2</strong></div>
-                                    <div class="panel-footer">TODO</div>
+                                    <div class="panel-footer">Analyzing 1st and 2nd order circuits, transistors, op-amp design, convolution & Laplace Transform</div>
                                 </div>
                             </div>
                         </div>
