--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h2>Coursework at Purdue University</h2>
             <div class="panel-group">
                 <div class="row">
-                    <div class="col">
+                    <div class="col-sm-4">
                         <div class="row">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -69,7 +69,7 @@
                             </div> 
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-4">
                         <div class="row">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col-sm-4">
                         <div class="row">
                             <div class="panel panel-default">
                                 <div class="panel-heading">
