Took away profile pic's fixed size

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <p class="text-center">Welcome to my website! I am majoring in Computer Engineering with a minor in Psychology at Purdue University (May 2021). I spent the summer of 2019 in Melbourne Florida working with Northrop Grumman as an Electronics and Payload Intern. I have an interest in Software Engineering, Development, and UX Design.</p>
                 </div>
                 <div class="col">
-                    <img id="dan_bus_prof" src="daniel-business-professional-cropped.jpg" size="900" alt="Daniel Burger dressed business professional">
+                    <img id="dan_bus_prof" src="daniel-business-professional-cropped.jpg" alt="Daniel Burger dressed business professional">
                 </div>
             </div>
         </div>
