--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <body id="background">
         <div id="welcome_box" class="container">
             <div class="row">
-                <div class="col">
-                    <h1 class="text-center">Hi, I'm Daniel Burger</h1>
+                <div class="col-sm-6">
+                    <h1 id="welcome" class="text-center">Hi, I'm Daniel Burger</h1>
                     <p class="text-center">Welcome to my website! I am majoring in Computer Engineering with a minor in Psychology at Purdue University (May 2021). I spent the summer of 2019 in Melbourne Florida working with Northrop Grumman as an Electronics and Payload Intern. I have an interest in Software Engineering, Development, and UX Design.</p>
                 </div>
-                <div class="col">
+                <div class="col-sm-6">
                     <img id="dan_bus_prof" src="daniel-business-professional-cropped.jpg" alt="Daniel Burger dressed business professional">
                 </div>
             </div>
@@ -33,7 +33,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
-                                    <a data-toggle="collapse" href="#collapse1">Principles of Engineering</a>
+                                    <a class="course-name" data-toggle="collapse" href="#collapse1">Principles of Engineering</a>
                                     </h4>
                                 </div>
                                 <div id="collapse1" class="panel-collapse collapse">
