--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     </head>
     <body id="background">
         <div id="welcome_box" class="container">
+            <h5 id="wip">Please note: This website is currently still in development, it may not look pretty yet or have everything I want to add, but im actively working on it!</h5>
             <div class="row">
                 <div class="col-sm-6">
-                    <h1 id="welcome" class="text-center">Hi, I'm Daniel Burger</h1>
+                    <h1 id="welcome_title" class="text-center">Hi, I'm Daniel Burger</h1>
                     <p class="text-center">Welcome to my website! I am majoring in Computer Engineering with a minor in Psychology at Purdue University (May 2021). I spent the summer of 2019 in Melbourne Florida working with Northrop Grumman as an Electronics and Payload Intern. I have an interest in Software Engineering, Development, and UX Design.</p>
+                    <p>
+                    <a href="https://www.linkedin.com/in/danielrburger/" target="_blank">LinkedIn</a>
+                    </p>
                 </div>
                 <div class="col-sm-6">
                     <img id="dan_bus_prof" src="daniel-business-professional-cropped.jpg" alt="Daniel Burger dressed business professional">
@@ -26,6 +30,9 @@
         </div>
         <div id="courses" class="container">
             <h2>Coursework at Purdue University</h2>
+            <p>
+            <a data-toggle="collapse" href=".panel-collapse">Click here to expand all</a>
+            </p>
             <div class="panel-group">
                 <div class="row">
                     <div class="col-sm-4">
@@ -33,7 +40,7 @@
                             <div class="panel panel-default">
                                 <div class="panel-heading">
                                     <h4 class="panel-title">
-                                    <a class="course-name" data-toggle="collapse" href="#collapse1">Principles of Engineering</a>
+                                    <a data-toggle="collapse" href="#collapse1">Principles of Engineering</a>
                                     </h4>
                                 </div>
                                 <div id="collapse1" class="panel-collapse collapse">
