--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
                     <h1 id="welcome_title" class="text-center">Hi, I'm Daniel Burger</h1>
                     <p class="text-center">Welcome to my website! I am majoring in Computer Engineering with a minor in Psychology at Purdue University (May 2021). I spent the summer of 2019 in Melbourne Florida working with Northrop Grumman as an Electronics and Payload Intern. I have an interest in Software Engineering, Development, and UX Design.</p>
                     <p id="socials">Check out my 
+                    <a href="Daniel Burger Resume 7-13-19.pdf" target="_blank">Resume</a>
+                    , 
                     <a href="https://www.linkedin.com/in/danielrburger/" target="_blank">LinkedIn</a>
                     , 
                     <a href="https://github.com/dburger4" target="_blank">GitHub</a>
