added 3 new sections, proj exp, fun, & graph dsign

--- a/index.html
+++ b/index.html
@@ -151,6 +151,15 @@
                 </div>
             </div>
         </div>
+        <div id="projects" class="container">
+            <h2>Project Experience</h2>
+        </div>
+        <div id="projects" class="container">
+            <h2>What I Do For Fun</h2>
+        </div>
+        <div id="projects" class="container">
+            <h2>Graphic Design</h2>
+        </div>
     </body>
 </html>
 
