added space between container sections

--- a/index.html
+++ b/index.html
@@ -154,10 +154,10 @@
         <div id="projects" class="container">
             <h2>Project Experience</h2>
         </div>
-        <div id="projects" class="container">
+        <div id="fun" class="container">
             <h2>What I Do For Fun</h2>
         </div>
-        <div id="projects" class="container">
+        <div id="design" class="container">
             <h2>Graphic Design</h2>
         </div>
     </body>
