edited wip message

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body id="background">
         <div id="welcome_box" class="container">
-            <h5 id="wip">Please note: This website is currently still in development, it may not look pretty yet or have everything I want to add, but im actively working on it!</h5>
+            <h5 id="wip">Please note: This website is currently still in development, it may not look pretty yet or have everything I want to add yet, but come back later to see it progress!</h5>
             <div class="row">
                 <div class="col-sm-6">
                     <h1 id="welcome_title" class="text-center">Hi, I'm Daniel Burger</h1>
