added boxes for projects under projects section

--- a/index.html
+++ b/index.html
@@ -154,6 +154,12 @@
         </div>
         <div id="projects" class="container">
             <h2>Project Experience</h2>
+            <div id="docker_proj" class="container-flex">
+                <p>test</p>
+            </div>
+            <div id="crazy_monkey_proj" class="container-flex">
+                <p>test</p>
+            </div>
         </div>
         <div id="fun" class="container">
             <h2>What I Do For Fun</h2>
