Updated the courses in progress info

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 </div>
                                 <div id="collapse7" class="panel-collapse collapse">
                                     <div class="panel-body"><strong>ECE 30862</strong></div>
-                                    <div class="panel-footer">~ In Progress ~</div>
+                                    <div class="panel-footer">~In Progress~, Polymorphism, Inheritance, Encapsulation</div>
                                 </div>
                             </div> 
                         </div>
@@ -116,7 +116,7 @@
                                 </div>
                                 <div id="collapse8" class="panel-collapse collapse">
                                     <div class="panel-body"><strong>ECE 301</strong></div>
-                                    <div class="panel-footer">~ In Progress ~</div>
+                                    <div class="panel-footer">~In Progress~</div>
                                 </div>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
                                 </div>
                                 <div id="collapse6" class="panel-collapse collapse">
                                     <div class="panel-body"><strong>ECE 20875</strong></div>
-                                    <div class="panel-footer">~ In Progress ~</div>
+                                    <div class="panel-footer">~In Progress~, Bash scripting, Python basics</div>
                                 </div>
                             </div>
                         </div>
