--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
                     <p class="text-center">Welcome to my website! I am majoring in Computer Engineering with a minor in Psychology at Purdue University (May 2021). I spent the summer of 2019 in Melbourne Florida working with Northrop Grumman as an Electronics and Payload Intern. I have an interest in Software Engineering, Development, and UX Design.</p>
                     <p id="socials">Check out my 
                     <a href="Daniel Burger Resume 7-13-19.pdf" target="_blank">Resume</a>, 
-                    <a href="https://www.linkedin.com/in/danielrburger/" target="_blank">LinkedIn</a>, 
-                    <a href="https://github.com/dburger4" target="_blank">GitHub</a>, or even my 
+                    <a href="https://www.linkedin.com/in/danielrburger/" target="_blank">LinkedIn</a>, and
+                    <a href="https://github.com/dburger4" target="_blank">GitHub</a> pages.
+                    <!--
                     <a href="https://www.instagram.com/_danielthemaniel/" target="_blank">Instagram</a> to get to know me better!
+                    --> 
                     </p>
                 </div>
                 <div class="col-sm-6">
