added docker logo to projects section

--- a/index.html
+++ b/index.html
@@ -157,7 +157,15 @@
         <div id="projects" class="container">
             <h2>Project Experience</h2>
             <div id="docker_proj" class="container-flex">
-                <p>test</p>
+                <div class="row">
+                    <div class="col">
+                        <img src="docker.png" class="img-fluid" alt="Docker logo">
+                    </div>
+                    <div class="col">
+                        <p>test</p>
+                    </div>
+                </div>
+                
             </div>
             <div id="crazy_monkey_proj" class="container-flex">
                 <p>test</p>
